cmake_minimum_required(VERSION 3.14)
project(Cpp-Study LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(MSVC)
  string(REGEX REPLACE /W[0-4] "" CMAKE_CXX_FLAGS_INIT /W4)
  add_compile_options(/WX /sdl /MP /Za /permissive- /source-charset:utf-8)
else()
  add_compile_options(-Wall -Wextra -Werror -Wpedantic)
endif()

#add_subdirectory(cpp-primer/chapter01)
#add_subdirectory(cpp-primer/chapter02)
#add_subdirectory(cpp-primer/chapter03)
#add_subdirectory(cpp-primer/chapter04)
#add_subdirectory(cpp-primer/chapter05)
#add_subdirectory(cpp-primer/chapter06)
#add_subdirectory(cpp-primer/chapter07)
#add_subdirectory(cpp-primer/chapter08)
#add_subdirectory(cpp-primer/chapter09)
#add_subdirectory(cpp-primer/chapter10)
#add_subdirectory(cpp-primer/chapter11)
#add_subdirectory(cpp-primer/chapter12)
#add_subdirectory(cpp-primer/chapter13)
#add_subdirectory(cpp-primer/chapter14)
#add_subdirectory(cpp-primer/chapter15)
#add_subdirectory(cpp-primer/chapter16)
#add_subdirectory(cpp-primer/chapter17)
#add_subdirectory(cpp-primer/chapter18)
#add_subdirectory(cpp-primer/chapter19)

#add_subdirectory(library/fmt)

#add_subdirectory(library/Qt/Core)
add_subdirectory(library/Qt/GUI)
#add_subdirectory(library/Qt/Network)
#add_subdirectory(library/Qt/SQL)
#add_subdirectory(library/Qt/Test)

#add_subdirectory(new-features/cpp11)
#add_subdirectory(new-features/cpp14)
#add_subdirectory(new-features/cpp17)
#add_subdirectory(new-features/cpp17/filesystem)

#add_subdirectory(notes)

#add_subdirectory(concurrency/chapter01)
#add_subdirectory(concurrency/chapter02)