cmake_minimum_required(VERSION 3.13)

project(Cpp LANGUAGES CXX)

if((CMAKE_BUILD_TYPE STREQUAL "Debug") OR (CMAKE_BUILD_TYPE STREQUAL
                                           "RelWithDebInfo"))
  # Address Memory Thread None
  set(SANITIZER "Address")
else()
  set(SANITIZER "None")
endif()

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
include(Check)
include(ClangTidy)
include(CompilerOptions)
include(Sanitizers)

add_subdirectory(cpp-primer/chapter01)
add_subdirectory(cpp-primer/chapter02)
add_subdirectory(cpp-primer/chapter03)
add_subdirectory(cpp-primer/chapter04)
add_subdirectory(cpp-primer/chapter05)
add_subdirectory(cpp-primer/chapter06)
add_subdirectory(cpp-primer/chapter07)
add_subdirectory(cpp-primer/chapter08)
add_subdirectory(cpp-primer/chapter09)
add_subdirectory(cpp-primer/chapter10)
add_subdirectory(cpp-primer/chapter11)
add_subdirectory(cpp-primer/chapter12)
# add_subdirectory(cpp-primer/chapter13)
# add_subdirectory(cpp-primer/chapter14)
# add_subdirectory(cpp-primer/chapter15)
# add_subdirectory(cpp-primer/chapter16)
# add_subdirectory(cpp-primer/chapter17)
# add_subdirectory(cpp-primer/chapter18)
# add_subdirectory(cpp-primer/chapter19)

add_subdirectory(library/Boost)
add_subdirectory(library/cmdline)
add_subdirectory(library/enum)
add_subdirectory(library/fmt)
add_subdirectory(library/json)
# add_subdirectory(library/sql)
add_subdirectory(library/test)

add_subdirectory(new-features/cpp11)
add_subdirectory(new-features/cpp14)
add_subdirectory(new-features/cpp17)
add_subdirectory(new-features/cpp17/filesystem)
add_subdirectory(new-features/cpp20)

add_subdirectory(notes)
