set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(ex_5_03 ex_5_03.cpp)
add_executable(ex_5_05 ex_5_05.cpp)
add_executable(ex_5_06 ex_5_06.cpp)
add_executable(ex_5_09 ex_5_09.cpp)
add_executable(ex_5_10 ex_5_10.cpp)
add_executable(ex_5_11 ex_5_11.cpp)
add_executable(ex_5_12 ex_5_12.cpp)
add_executable(ex_5_14 ex_5_14.cpp)
add_executable(ex_5_17 ex_5_17.cpp)
add_executable(ex_5_19 ex_5_19.cpp)
add_executable(ex_5_20 ex_5_20.cpp)
add_executable(ex_5_21 ex_5_21.cpp)
add_executable(ex_5_23 ex_5_23.cpp)
add_executable(ex_5_24 ex_5_24.cpp)
add_executable(ex_5_25 ex_5_25.cpp)