set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(ex_6_03 ex_6_03.cpp)
add_executable(ex_6_04 ex_6_04.cpp)
add_executable(ex_6_05 ex_6_05.cpp)
add_executable(ex_6_07 ex_6_07.cpp)
add_executable(fact fact.cc fact_main.cc chapter6.h)
add_executable(ex_6_10 ex_6_10.cpp)
add_executable(ex_6_11 ex_6_11.cpp)
add_executable(ex_6_12 ex_6_12.cpp)
add_executable(ex_6_17 ex_6_17.cpp)
add_executable(ex_6_25 ex_6_25.cpp)
add_executable(ex_6_26 ex_6_26.cpp)
add_executable(ex_6_27 ex_6_27.cpp)
add_executable(ex_6_33 ex_6_33.cpp)
add_executable(ex_6_42 ex_6_42.cpp)
add_executable(ex_6_47 ex_6_47.cpp)
add_executable(ex_6_51 ex_6_51.cpp)