set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

include_directories(${PROJECT_SOURCE_DIR}/include)
file(COPY ${PROJECT_SOURCE_DIR}/data/book DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(ex_1_1 ex_1_1.cpp)
add_executable(ex_1_2 ex_1_2.cpp)
add_executable(ex_1_3 ex_1_3.cpp)
add_executable(ex_1_4 ex_1_4.cpp)
add_executable(ex_1_5 ex_1_5.cpp)
add_executable(ex_1_9 ex_1_9.cpp)
add_executable(ex_1_10 ex_1_10.cpp)
add_executable(ex_1_11 ex_1_11.cpp)
add_executable(ex_1_13 ex_1_13.cpp)
add_executable(ex_1_16 ex_1_16.cpp)
add_executable(ex_1_18 ex_1_18.cpp)
add_executable(ex_1_19 ex_1_19.cpp)
add_executable(ex_1_20 ex_1_20.cpp)
add_executable(ex_1_21 ex_1_21.cpp)
add_executable(ex_1_22 ex_1_22.cpp)
add_executable(ex_1_23 ex_1_23.cpp)
add_executable(ex_1_25 ex_1_25.cpp)