set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

file(COPY ${PROJECT_SOURCE_DIR}/data/book DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/data/story DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(ex_12_02 ex_12_02.cpp ex_12_02.h ex_12_02_test.cpp)
add_executable(ex_12_06 ex_12_06.cpp)
add_executable(ex_12_07 ex_12_07.cpp)
add_executable(ex_12_14 ex_12_14.cpp)
add_executable(ex_12_15 ex_12_15.cpp)
add_executable(ex_12_20 ex_12_19.cpp ex_12_19.h ex_12_20.cpp)
add_executable(ex_12_22 ex_12_22.cpp ex_12_22.h ex_12_22_test.cpp)
add_executable(ex_12_23a ex_12_23a.cpp)
add_executable(ex_12_23b ex_12_23b.cpp)
add_executable(ex_12_24 ex_12_24.cpp)
add_executable(ex_12_26 ex_12_26.cpp)
add_executable(ex_12_27 ex_12_27_test.cpp ex_12_27.cpp ex_12_27.h)
add_executable(ex_12_28 ex_12_28.cpp)
add_executable(ex_12_29 ex_12_29.cpp ex_12_27.cpp ex_12_27.h)
add_executable(ex_12_32 ex_12_32_test.cpp ex_12_32.cpp ex_12_32.h ex_12_22.h ex_12_22.cpp)
add_executable(ex_12_33 ex_12_33_test.cpp ex_12_33.cpp ex_12_33.h ex_12_22.h ex_12_22.cpp)