set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(ex_13_05 ex_13_05.h test.cpp)
add_executable(ex_13_08 ex_13_08.h test.cpp)
add_executable(ex_13_11 ex_13_11.h test.cpp)
add_executable(ex_13_13 ex_13_13.cpp)
add_executable(ex_13_14 ex_13_14.cpp)
add_executable(ex_13_15 ex_13_15.cpp)
add_executable(ex_13_16 ex_13_16.cpp)
add_executable(ex_13_18 ex_13_18.h test.cpp)
add_executable(ex_13_19 ex_13_19.h test.cpp)
add_executable(ex_13_20 ex_13_20.h test.cpp)
add_executable(ex_13_26 ex_13_26.cpp ex_13_26.h ex_13_26_test.cpp)
add_executable(ex_13_27 ex_13_27.h test.cpp)
add_executable(ex_13_30 ex_13_30.h test.cpp)
add_executable(ex_13_31 ex_13_31.h ex_13_31.cpp)
add_executable(ex_13_39 ex_13_39.cpp ex_13_39.h ex_13_39_test.cpp)