set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

file(COPY ${PROJECT_SOURCE_DIR}/data/story DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(ex_13_13 ex_13_13.cpp)
add_executable(ex_13_14 ex_13_14.cpp)
add_executable(ex_13_15 ex_13_15.cpp)
add_executable(ex_13_16 ex_13_16.cpp)
add_executable(ex_13_26 ex_13_26.cpp ex_13_26.h ex_13_26_test.cpp)
add_executable(ex_13_31 ex_13_31.h ex_13_31.cpp)
add_executable(ex_13_39 ex_13_39.cpp ex_13_39.h ex_13_39_test.cpp)
add_executable(ex_13_40 ex_13_40.cpp ex_13_40.h ex_13_40_test.cpp)
add_executable(ex_13_42 ex_13_40.cpp ex_13_40.h ex_13_42.cpp ex_13_42.h ex_13_42_test.cpp)
add_executable(ex_13_44 ex_13_44.cpp ex_13_44.h ex_13_44_test.cpp)
add_executable(ex_13_48 ex_13_47.cpp ex_13_47.h ex_13_48.cpp)
add_executable(ex_13_49_strvec ex_13_49_strvec.cpp ex_13_49_strvec.h)
add_executable(ex_13_49_string ex_13_49_string.cpp ex_13_49_string.h)
add_executable(ex_13_50 ex_13_50.cpp ex_13_50.h ex_13_50_test.cpp)
add_executable(ex_13_53 ex_13_53.h ex_13_53.cpp)
add_executable(ex_13_55 ex_13_55.h ex_13_55.cpp)