set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(ex_15_03 ex_15_03.cpp ex_15_03.h)
add_executable(ex_15_05 ex_15_05.h ex_15_03.cpp ex_15_03.h)
add_executable(ex_15_06 ex_15_06.cpp ex_15_05.h ex_15_03.cpp ex_15_03.h)
add_executable(ex_15_07 ex_15_07.h ex_15_03.cpp ex_15_03.h)
add_executable(ex_15_16 ex_15_16.cpp ex_15_16.h)
add_executable(ex_15_17 ex_15_17.cpp ex_15_16.cpp ex_15_16.h)
add_executable(ex_15_26 ex_15_26.h ex_15_26.cpp)
add_executable(ex_15_27 ex_15_27.h ex_15_27.cpp)
add_executable(ex_15_28 ex_15_28.h ex_15_28.cpp)
add_executable(ex_15_29 ex_15_28.h ex_15_29.cpp)
add_executable(ex_15_30 ex_15_30_quote.h ex_15_30_quote.cpp ex_15_30.cpp ex_15_30.h ex_15_30_test.cpp)