set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(ex_16_02 ex_16_02.cpp)
add_executable(ex_16_03 ex_16_03.cpp)
add_executable(ex_16_04 ex_16_04.cpp)
add_executable(ex_16_05 ex_16_05.cpp)
add_executable(ex_16_06 ex_16_06.cpp)
add_executable(ex_16_07 ex_16_07.cpp)
add_executable(ex_16_12 ex_16_12.cpp ex_16_12.h)
add_executable(ex_16_15 ex_16_15.cpp ex_16_15.h)
add_executable(ex_16_16 ex_16_16.cpp ex_16_16.h)
add_executable(ex_16_19 ex_16_19.cpp)
add_executable(ex_16_20 ex_16_20.cpp)
add_executable(ex_16_21 ex_16_21.cpp)
add_executable(ex_16_24 ex_16_24.cpp ex_16_24.h)
add_executable(ex_16_28 ex_16_28.cpp ex_16_28.h)
add_executable(ex_16_29 ex_16_29.cpp ex_16_29.h ex_16_28.h)