set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

file(COPY ${PROJECT_SOURCE_DIR}/data/story DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/data/record DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/data/record2 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

file(COPY ${PROJECT_SOURCE_DIR}/data/word_transformation2 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/data/given_to_transform DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(ex_17_03 ex_17_03.cpp ex_17_03.h ex_17_03_test.cpp)
add_executable(ex_17_04 ex_17_04.cpp sales_data.cpp sales_data.h)
add_executable(ex_17_05 ex_17_05.cpp sales_data.cpp sales_data.h)
add_executable(ex_17_06 ex_17_06.cpp sales_data.cpp sales_data.h)
add_executable(ex_17_15 ex_17_15.cpp)
add_executable(ex_17_17 ex_17_17.cpp)
add_executable(ex_17_20 ex_17_20.cpp)
add_executable(ex_17_21 ex_17_21.cpp)
add_executable(ex_17_22 ex_17_22.cpp)
add_executable(ex_17_23 ex_17_23.cpp)
add_executable(ex_17_24 ex_17_24.cpp)
add_executable(ex_17_25 ex_17_25.cpp)
add_executable(ex_17_26 ex_17_26.cpp)
add_executable(ex_17_27 ex_17_27.cpp)
add_executable(ex_17_28 ex_17_28.cpp)
add_executable(ex_17_29 ex_17_29.cpp)
add_executable(ex_17_30 ex_17_30.cpp)
add_executable(ex_17_33 ex_17_33.cpp)
add_executable(ex_17_37 ex_17_37.cpp)
add_executable(ex_17_38 ex_17_38.cpp)
add_executable(ex_17_39 ex_17_39.cpp)