set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(ex_19_01 ex_19_01.cpp)
add_executable(ex_19_02 ex_19_02.cpp ex_19_02.h ex_19_02_test.cpp)
add_executable(ex_19_06 ex_19_06.cpp)
add_executable(ex_19_07 ex_19_07.cpp)
add_executable(ex_19_08 ex_19_08.cpp)
add_executable(ex_19_09 ex_19_09.cpp)
add_executable(ex_19_10 ex_19_10.cpp)