set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(ex_3_2 ex_3_2.cpp)
add_executable(ex_3_4 ex_3_4.cpp)
add_executable(ex_3_5 ex_3_5.cpp)
add_executable(ex_3_6 ex_3_6.cpp)
add_executable(ex_3_7 ex_3_7.cpp)
add_executable(ex_3_8 ex_3_8.cpp)
add_executable(ex_3_10 ex_3_10.cpp)
add_executable(ex_3_14 ex_3_14.cpp)
add_executable(ex_3_15 ex_3_15.cpp)
add_executable(ex_3_17 ex_3_17.cpp)
add_executable(ex_3_20 ex_3_20.cpp)
add_executable(ex_3_22 ex_3_22.cpp)
add_executable(ex_3_23 ex_3_23.cpp)
add_executable(ex_3_24 ex_3_24.cpp)
add_executable(ex_3_25 ex_3_25.cpp)