set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(ex_6_3 ex_6_3.cpp)
add_executable(ex_6_4 ex_6_4.cpp)
add_executable(ex_6_5 ex_6_5.cpp)
add_executable(ex_6_7 ex_6_7.cpp)
add_executable(fact fact.cc fact_main.cc chapter6.h)
add_executable(ex_6_10 ex_6_10.cpp)
add_executable(ex_6_11 ex_6_11.cpp)
add_executable(ex_6_12 ex_6_12.cpp)
add_executable(ex_6_17 ex_6_17.cpp)
add_executable(ex_6_25 ex_6_25.cpp)
add_executable(ex_6_26 ex_6_26.cpp)
add_executable(ex_6_27 ex_6_27.cpp)
add_executable(ex_6_33 ex_6_33.cpp)
add_executable(ex_6_42 ex_6_42.cpp)
add_executable(ex_6_47 ex_6_47.cpp)
add_executable(ex_6_51 ex_6_51.cpp)