set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

file(COPY ${PROJECT_SOURCE_DIR}/data/letter DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(ex_9_4 ex_9_4.cpp)
add_executable(ex_9_5 ex_9_5.cpp)
add_executable(ex_9_13 ex_9_13.cpp)
add_executable(ex_9_14 ex_9_14.cpp)
add_executable(ex_9_15 ex_9_15.cpp)
add_executable(ex_9_16 ex_9_16.cpp)
add_executable(ex_9_18 ex_9_18.cpp)
add_executable(ex_9_19 ex_9_19.cpp)
add_executable(ex_9_20 ex_9_20.cpp)
add_executable(ex_9_26 ex_9_26.cpp)
add_executable(ex_9_27 ex_9_27.cpp)
add_executable(ex_9_28 ex_9_28.cpp)
add_executable(ex_9_31a ex_9_31a.cpp)
add_executable(ex_9_31b ex_9_31b.cpp)
add_executable(ex_9_43 ex_9_43.cpp)
add_executable(ex_9_44 ex_9_44.cpp)
add_executable(ex_9_45 ex_9_45.cpp)
add_executable(ex_9_46 ex_9_46.cpp)
add_executable(ex_9_47a ex_9_47a.cpp)
add_executable(ex_9_47b ex_9_47b.cpp)
add_executable(ex_9_49 ex_9_49.cpp)
add_executable(ex_9_50a ex_9_50a.cpp)
add_executable(ex_9_50b ex_9_50b.cpp)
add_executable(ex_9_51 ex_9_51.h ex_9_51.cpp)
add_executable(ex_9_52 ex_9_52.cpp)