set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

find_package(fmt)

add_executable(variable_template cpp14/variable_template.cpp)
add_executable(exchange cpp14/exchange.cpp)
add_executable(make_from_tuple cpp17/make_from_tuple.cpp)
add_executable(apply cpp17/apply.cpp)
add_executable(invoke cpp17/invoke.cpp)
add_executable(enable_shared_from_this cpp11/enable_shared_from_this.cpp)
add_executable(not_fn cpp17/not_fn.cpp)
add_executable(tie cpp11/tie.cpp)
add_executable(constexpr_if cpp17/constexpr_if.cpp)
add_executable(fold_expression cpp17/fold_expression.cpp)
add_executable(try_emplace cpp17/try_emplace.cpp)
add_executable(extract cpp17/extract.cpp)
add_executable(clamp cpp17/clamp.cpp)
add_executable(sample cpp17/sample.cpp)
add_executable(string_view cpp17/string_view.cpp)
add_executable(optional cpp17/optional.cpp)
add_executable(any cpp17/any.cpp)
add_executable(variant cpp17/variant.cpp)

add_executable(filesystem cpp17/filesystem/filesystem.cpp)
target_link_libraries(filesystem stdc++fs)

add_executable(ls cpp17/filesystem/ls.cpp)
target_link_libraries(ls stdc++fs fmt::fmt)