add_executable(ex_3_02 ex_3_02.cpp)
add_executable(ex_3_04 ex_3_04.cpp)
add_executable(ex_3_05 ex_3_05.cpp)
add_executable(ex_3_06 ex_3_06.cpp)
add_executable(ex_3_07 ex_3_07.cpp)
add_executable(ex_3_08 ex_3_08.cpp)
add_executable(ex_3_10 ex_3_10.cpp)
add_executable(ex_3_14 ex_3_14.cpp)
add_executable(ex_3_15 ex_3_15.cpp)
add_executable(ex_3_17 ex_3_17.cpp)
add_executable(ex_3_20 ex_3_20.cpp)
add_executable(ex_3_22 ex_3_22.cpp)
add_executable(ex_3_23 ex_3_23.cpp)
add_executable(ex_3_24 ex_3_24.cpp)
add_executable(ex_3_25 ex_3_25.cpp)
