set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(make_from_tuple make_from_tuple.cpp)
add_executable(apply apply.cpp)
add_executable(invoke invoke.cpp)
add_executable(not_fn not_fn.cpp)
add_executable(constexpr_if constexpr_if.cpp)
add_executable(fold_expression fold_expression.cpp)
add_executable(try_emplace try_emplace.cpp)
add_executable(extract extract.cpp)
add_executable(clamp clamp.cpp)
add_executable(sample sample.cpp)
add_executable(string_view string_view.cpp)
add_executable(optional optional.cpp)
add_executable(any any.cpp)
add_executable(variant variant.cpp)